# ChangeLog for dev-lang/squeak
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/squeak/ChangeLog,v 1.25 2007/07/22 08:43:03 graaff Exp $

  22 Jul 2007; Hans de Graaff <graaff@gentoo.org> squeak-3.4.1-r2.ebuild,
  squeak-3.6_p3.ebuild, squeak-3.7.7-r1.ebuild, squeak-3.9.7.ebuild:
  Drop virtual/x11 references.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  06 Feb 2007; Marius Mauch <genone@gentoo.org> squeak-3.4.1-r2.ebuild,
  squeak-3.6_p3.ebuild, squeak-3.7.7-r1.ebuild, squeak-3.9.7.ebuild:
  Replacing einfo with elog

  25 Dec 2006; Luis F. Araujo <araujo@gentoo.org> squeak-3.7.7-r1.ebuild:
  Fixed X atom.

  25 Dec 2006; Luis F. Araujo <araujo@gentoo.org> squeak-3.9.7.ebuild:
  Fixed X atom.

  09 Aug 2006; Luis F. Araujo <araujo@gentoo.org> -squeak-3.4.1-r1.ebuild:
  Removing old package version. New revision available.

*squeak-3.9.7 (09 Aug 2006)

  09 Aug 2006; Luis F. Araujo <araujo@gentoo.org> +squeak-3.9.7.ebuild:
  Adding new version of squeak. bug #141615

*squeak-3.7.7-r1 (09 Aug 2006)

  09 Aug 2006; Luis F. Araujo <araujo@gentoo.org> +squeak-3.7.7-r1.ebuild:
  Bug #133032 fixed. Fixed broken X library dependency also.

  19 Mar 2006; Mark Loeser <halcy0n@gentoo.org> squeak-3.6_p3.ebuild:
  Add DEPEND on app-arch/unzip

  08 Mar 2006; Luis F. Araujo <araujo@gentoo.org> squeak-3.7.7.ebuild:
  Fixing bug #125460

  07 Mar 2006; Luis F. Araujo <araujo@gentoo.org> metadata.xml,
  -squeak-3.2.5.ebuild, -squeak-3.4.1.ebuild, squeak-3.4.1-r1.ebuild,
  squeak-3.4.1-r2.ebuild, squeak-3.6_p3.ebuild, +squeak-3.7.7.ebuild:
  Porting all of the ebuilds to modular X.

*squeak-3.7.7 (07 Mar 2006)

  07 Mar 2006; Luis F. Araujo <araujo@gentoo.org> metadata.xml,
  +squeak-3.7.7.ebuild:
  Updating Squeak VM to latest stable version.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> squeak-3.2.5.ebuild,